<resources>
    <string name="app_name">XHFW3</string>
    <string name="hello_world">Hello world!</string>
	<string name="app_description">Halo Floating Windows from Paranoid Android with Movable &amp; Resizable feature.(zst123)</string>
    <string name="app_blacklist">Blacklist</string>
    <string name="app_whitelist">Whitelist</string>
	<string name="app_maximized">Maximized List</string>
    <string name="app_testing">Testing</string>
    <string name="app_statusbar_taskbar">Statusbar Taskbar</string>
	<string name="getLogs">Save logs to /sdcard/XHFWlogs</string>
    <string name="option_gravity_1">Top Left Corner</string>
    <string name="option_gravity_2">Top Center</string>
    <string name="pref_window_top_title">Popup Window</string>
    <string name="pref_window_top_summary">Customize Window Properties</string>
    <string name="pref_alpha_title">Popup Alpha</string>
    <string name="pref_alpha_summary">Transparency of Window</string>
    <string name="pref_dim_title">Popup Dim</string>
    <string name="pref_dim_summary">Background Dimming of Popup</string>
    <string name="pref_gravity_title">Gravity</string>
    <string name="pref_gravity_summary">Position of the Popup</string>
	<string name="pref_behavior_title">Window behavior</string>
	<string name="pref_overlay_title">Titlebar and corners</string>
    <string name="pref_width_portrait_title">Portrait Width</string>
    <string name="pref_width_portrait_summary">Width of Popup in Portrait</string>
    <string name="pref_height_portrait_title">Portrait Height</string>
    <string name="pref_height_portrait_summary">Height of Popup in Portrait</string>
    <string name="pref_width_landscape_title">Landscape Width</string>
    <string name="pref_width_landscape_summary">Width of Popup in Landscape</string>
    <string name="pref_height_landscape_title">Landscape Height</string>
    <string name="pref_height_landscape_summary">Height of Popup in Landscape</string>
	<string name="pref_all_maximized_title">Start All Movable Windows Maximized</string>
    <string name="pref_all_maximized_summary">Maximize everything from start</string>
    <string name="pref_keyboard_title">Keyboard Mode</string>
    <string name="pref_keyboard_summary">The action the popup will do when a keyboard opens.</string>
    <string name="pref_show_recents_title">Show App in Recents</string>
    <string name="pref_show_recents_summary">Allows the app to be shown in the recents screen.</string>
    <string name="pref_force_recents_title">Force App in Recents</string>
    <string name="pref_force_recents_summary">Bypass hiding done by app launchers &amp; force the app to be shown in recents screen.</string>
    <string name="pref_force_open_app_above_halo_title">Force New Windows in Halo</string>
    <string name="pref_force_open_app_above_halo_summary">If an app is currently open in floating mode, new apps that open above it is forced to open in floating mode.</string>
    <string name="pref_blacklist_title">Blacklist Apps</string>
    <string name="pref_blacklist_summary">Choose a list of apps to never open in floating mode</string>
    <string name="pref_whitelist_title">Whitelist Apps</string>
    <string name="pref_whitelist_summary">Choose a list of apps to always open in floating mode</string>
	<string name="pref_launcher_title">FloatDot Launcher Apps</string>
    <string name="pref_launcher_summary">Choose a list of apps to show in launcher menu</string>
	<string name="pref_whiteblacklist_title">Whitelist/Blacklist Options</string>
    <string name="pref_whiteblacklist_summary">Choose a different behavior to use the black and whitelist</string>
	<string name="pref_force_snap_title">Autosnap windows</string>
	<string name="pref_force_snap_summary">If new windows should automaticaly snap side by side</string>
	<string name="pref_move_max_range_title">Minimal move to unsnap</string>
	<string name="pref_move_max_range_summary">Set less to unsnap easier with ActionBar move or more to avoid unwanted unsnaps</string>
    <string name="floating_flags">Floating flag system id</string>
    <string name="floating_flags_summary">This flag is attached to windows so the systems knows their status.\nChoose the Old style to have old launchers working, but you will have infamous Chrome bug.\nNB: To use new flag your launcher must pass it instead of/with the old one.</string>
    <string name="pref_movable_titlebar_size_title">TitleBar Size</string>
    <string name="pref_movable_titlebar_size_summary">Height of the titlebar</string>
    <string name="pref_movable_titlebar_separator_enabled_title">Enable TitleBar Separator Line</string>
    <string name="pref_movable_titlebar_separator_enabled_summary">Show a separator line below the titlebar</string>
    <string name="pref_movable_titlebar_separator_size_title">Separator Line Size</string>
    <string name="pref_movable_titlebar_separator_size_summary">Height of the separator line below the titlebar</string>
    <string name="pref_movable_titlebar_separator_color_title">Separator Line Color</string>
    <string name="pref_movable_titlebar_separator_color_summary">The color of the separator line below the titlebar</string>
    <string name="pref_movable_titlebar_single_window_title">Treat Apps as Single Window</string>
    <string name="pref_movable_titlebar_single_window_summary">When enabled, the close button will close the entire app instead of that individual window.\n(Requires Android 4.1 and above)</string>
    <string name="pref_movable_titlebar_max_hide_title">Hide TitleBar when maximized</string>
    <string name="pref_movable_titlebar_max_hide_summary">Hides the titlebar when maximized and show it again when resizing.</string>
    <string name="pref_movable_resizing_live_update_title">Live Resize Updating </string>
    <string name="pref_movable_resizing_live_update_summary">When resizing windows, contents will refresh immediately instead of showing an outline.\n(May reduce performance)</string>
    <string name="pref_movable_resizing_aero_snap_enabled_title">Snap-in Windows</string>
    <string name="pref_movable_resizing_aero_snap_enabled_summary">Drag a window to the any 4 edges of the screen to resize it to the respective half of the screen, similar to Aero Snap in Windows OS.</string>
    <string name="pref_movable_resizing_aero_snap_delay_title">Snap-in Delay</string>
    <string name="pref_movable_resizing_aero_snap_delay_summary">Delay in milliseconds before snap-in outline is shown.</string>
    <string name="pref_movable_resizing_aero_snap_titlebar_hide_title">Hide TitleBar when snapped</string>
    <string name="pref_movable_resizing_aero_snap_titlebar_hide_summary">Hides the titlebar when snapping and show it again when unsnapping or resizing.\n(Requires Snap-in Windows to be enabled)</string>
    <string name="pref_movable_triangle_enable_title">Show Triangle</string>
    <string name="pref_movable_triangle_enable_summary">Show a triangle on the bottom left of the window for additional actions.</string>
    <string name="pref_movable_triangle_color_title">Triangle Color</string>
    <string name="pref_movable_triangle_color_summary">Color of the corner triangle</string>
    <string name="pref_movable_triangle_alpha_title">Triangle Alpha</string>
    <string name="pref_movable_triangle_alpha_summary">Transparency of the corner triangle</string>
    <string name="pref_movable_triangle_size_title">Triangle Size</string>
    <string name="pref_movable_triangle_size_summary">Size of the corner triangle</string>
    <string name="pref_movable_triangle_sp_action_title">Triangle Single Press Action</string>
    <string name="pref_movable_triangle_sp_action_summary">The action that will occur when clicking the corner triangle.</string>
    <string name="pref_movable_triangle_lp_action_title">Triangle Long Press Action</string>
    <string name="pref_movable_triangle_lp_action_summary">The action that will occur when long pressing the corner triangle.</string>
    <string name="pref_movable_quadrant_enable_title">Show Quadrant</string>
    <string name="pref_movable_quadrant_enable_summary">Show a quadrant on the bottom right of the window for additional actions.</string>
    <string name="pref_movable_quadrant_color_title">Quadrant Color</string>
    <string name="pref_movable_quadrant_color_summary">Color of the corner quadrant</string>
    <string name="pref_movable_quadrant_alpha_title">Quadrant Alpha</string>
    <string name="pref_movable_quadrant_alpha_summary">Transparency of the corner quadrant</string>
    <string name="pref_movable_quadrant_size_title">Quadrant Size</string>
    <string name="pref_movable_quadrant_size_summary">Size of the corner quadrant</string>
    <string name="pref_movable_quadrant_sp_action_title">Quadrant Single Press Action</string>
    <string name="pref_movable_quadrant_sp_action_summary">The action that will occur when clicking the corner quadrant.</string>
    <string name="pref_movable_quadrant_lp_action_title">Quadrant Long Press Action</string>
    <string name="pref_movable_quadrant_lp_action_summary">The action that will occur when long pressing the corner quadrant.</string>
    <string name="pref_movable_resize_enabled_title">Enable Resizing</string>
    <string name="pref_movable_resize_enabled_summary">Use to resize window when dragged.</string>
    <string name="pref_movable_dragging_enabled_title">Enable Dragging</string>
    <string name="pref_movable_dragging_enabled_summary">Use to move window when dragged.</string>
    <string name="pref_movable_border_enable_title">Show Border</string>
    <string name="pref_movable_border_enable_summary">Show a border around the edge of the window</string>
    <string name="pref_movable_border_color_title">Border Color</string>
    <string name="pref_movable_border_color_summary">Color of the border</string>
    <string name="pref_movable_border_thickness_title">Border Width</string>
    <string name="pref_movable_border_thickness_summary">Thickness of the border in pixels</string>
    <string name="pref_movable_others_minimize_to_statusbar_title">Minimize to Statusbar</string>
    <string name="pref_movable_others_minimize_to_statusbar_summary">Show applications in statusbar when minimized.</string>
    <string name="pref_movable_others_tinted_title_enable_title">Colored TitleBar</string>
    <string name="pref_movable_others_tinted_title_enable_summary">Use the app\'s Primary Dark color for the titlebar.</string>
    <string name="pref_movable_others_tinted_title_border_title">Tint Window Border</string>
    <string name="pref_movable_others_tinted_title_border_summary">Change the window border (if enabled) to the titlebar color.</string>
    <string name="pref_movable_others_tinted_title_corner_title">Tint Window Corners</string>
    <string name="pref_movable_others_tinted_title_corner_summary">Change the triangle and quadrant (if enabled) to the titlebar color.</string>
	<string name="floatdot_color_outer1_title">FloatDot Snap Color</string>
	<string name="floatdot_color_inner1_title">FloatDot Snap Inner Color</string>
	<string name="floatdot_color_outer2_title">FloatDot Launcher Color</string>
	<string name="floatdot_color_inner2_title">FloatDot Launcher Inner Color</string>
	<string name="pref_floatdot_single_color_snap_title">Single Color for FloatDot Snap</string>
	<string name="pref_floatdot_single_color_snap_summary">Do not use double circles</string>
	<string name="pref_floatdot_single_color_launcher_title">Single Color for FloatDot Launcher</string>
	<string name="pref_floatdot_single_color_launcher_summary">Do not use double circles</string>
	<string name="pref_floatdot_size_title">Floating Dots\' Size</string>
	<string name="pref_floatdot_alpha_title">Transparency</string>
	<string name="pref_floatdot_launcher_title">Enable FloatDot Launcher</string>
    <string name="pref_floatdot_title">FloatDot settings</string>
</resources>