<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:summary=""
    android:title="@string/pref_overlay_title">
	

    <PreferenceCategory android:title="Titlebar">
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetNumberPicker
            defaultValue="32"
            maximum="120"
            minimum="0"
            android:key="window_moving_titlebar_size"
            android:summary="@string/pref_movable_titlebar_size_summary"
            android:title="@string/pref_movable_titlebar_size_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="window_moving_titlebar_separator_enabled"
            android:summary="@string/pref_movable_titlebar_separator_enabled_summary"
            android:title="@string/pref_movable_titlebar_separator_enabled_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetNumberPicker
            defaultValue="2"
            maximum="120"
            minimum="0"
            android:dependency="window_moving_titlebar_separator_enabled"
            android:key="window_moving_titlebar_separator_size"
            android:summary="@string/pref_movable_titlebar_separator_size_summary"
            android:title="@string/pref_movable_titlebar_separator_size_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.ColorPicker
            defaultValue="FFFFFF"
            android:dependency="window_moving_titlebar_separator_enabled"
            android:key="window_moving_titlebar_separator_color"
            android:summary="@string/pref_movable_titlebar_separator_color_summary"
            android:title="@string/pref_movable_titlebar_separator_color_title" />
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="window_moving_titlebar_single_window"
			android:summary="@string/pref_movable_titlebar_single_window_summary"
			android:title="@string/pref_movable_titlebar_single_window_title" />
		<Preference
            android:key="titlebar_theme"
            android:summary="Choose appearance"
            android:title="Theme" />
	</PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_floatdot_title">
		<Preference
            android:key="floatdot_theme"
            android:summary="Change those tiny launcher dots"
            android:title="FloatDot Theme" />
		<Preference
			android:key="launcher_list"
			android:summary="@string/pref_launcher_summary"
			android:title="@string/pref_launcher_title" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="Triangle">
        <SwitchPreference
            android:defaultValue="true"
            android:key="window_triangle_enabled"
            android:summary="@string/pref_movable_triangle_enable_summary"
            android:title="@string/pref_movable_triangle_enable_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_resize_enabled"
            android:summary="@string/pref_movable_resize_enabled_summary"
            android:title="@string/pref_movable_resize_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_dragging_enabled"
            android:summary="@string/pref_movable_dragging_enabled_summary"
            android:title="@string/pref_movable_dragging_enabled_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.ColorPicker
            defaultValue="FFFFFF"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_color"
            android:summary="@string/pref_movable_triangle_color_summary"
            android:title="@string/pref_movable_triangle_color_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetFloatPercentage
            defaultValue="0.5"
            maximum="1"
            minimum="0"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_alpha"
            android:summary="@string/pref_movable_triangle_alpha_summary"
            android:title="@string/pref_movable_triangle_alpha_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetNumberPicker
            defaultValue="36"
            maximum="100"
            minimum="1"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_size"
            android:summary="@string/pref_movable_triangle_size_summary"
            android:title="@string/pref_movable_triangle_size_title" />
        <ListPreference
            android:defaultValue="0"
            android:dependency="window_triangle_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_triangle_sp_action"
            android:summary="@string/pref_movable_triangle_sp_action_summary"
            android:title="@string/pref_movable_triangle_sp_action_title" />
        <ListPreference
            android:defaultValue="1"
            android:dependency="window_triangle_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_triangle_lp_action"
            android:summary="@string/pref_movable_triangle_lp_action_summary"
            android:title="@string/pref_movable_triangle_lp_action_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="Quadrant">
        <SwitchPreference
            android:defaultValue="false"
            android:key="window_quadrant_enabled"
            android:summary="@string/pref_movable_quadrant_enable_summary"
            android:title="@string/pref_movable_quadrant_enable_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_resize_enabled"
            android:summary="@string/pref_movable_resize_enabled_summary"
            android:title="@string/pref_movable_resize_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_dragging_enabled"
            android:summary="@string/pref_movable_dragging_enabled_summary"
            android:title="@string/pref_movable_dragging_enabled_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.ColorPicker
            defaultValue="FFFFFF"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_color"
            android:summary="@string/pref_movable_quadrant_color_summary"
            android:title="@string/pref_movable_quadrant_color_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetFloatPercentage
            defaultValue="0.5"
            maximum="1"
            minimum="0"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_alpha"
            android:summary="@string/pref_movable_quadrant_alpha_summary"
            android:title="@string/pref_movable_quadrant_alpha_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetNumberPicker
            defaultValue="36"
            maximum="100"
            minimum="1"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_size"
            android:summary="@string/pref_movable_quadrant_size_summary"
            android:title="@string/pref_movable_quadrant_size_title" />
        <ListPreference
            android:defaultValue="0"
            android:dependency="window_quadrant_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_quadrant_sp_action"
            android:summary="@string/pref_movable_quadrant_sp_action_summary"
            android:title="@string/pref_movable_quadrant_sp_action_title" />
        <ListPreference
            android:defaultValue="0"
            android:dependency="window_quadrant_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_quadrant_lp_action"
            android:summary="@string/pref_movable_quadrant_lp_action_summary"
            android:title="@string/pref_movable_quadrant_lp_action_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="Border">
        <SwitchPreference
            android:defaultValue="true"
            android:key="window_border_enabled"
            android:summary="@string/pref_movable_border_enable_summary"
            android:title="@string/pref_movable_border_enable_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.ColorPicker
            defaultValue="000000"
            android:dependency="window_border_enabled"
            android:key="window_border_color"
            android:summary="@string/pref_movable_border_color_summary"
            android:title="@string/pref_movable_border_color_title" />
        <com.zst.xposed.halo.floatingwindow3.prefs.WidgetNumberPicker
            defaultValue="0"
            maximum="100"
            minimum="0"
            android:dependency="window_border_enabled"
            android:key="window_border_thickness"
            android:summary="@string/pref_movable_border_thickness_summary"
            android:title="@string/pref_movable_border_thickness_title" />
    </PreferenceCategory>
	<PreferenceCategory android:title="Tinted overlays">
        <SwitchPreference
            android:defaultValue="true"
            android:key="window_tinted_title_enabled"
            android:summary="@string/pref_movable_others_tinted_title_enable_summary"
            android:title="@string/pref_movable_others_tinted_title_enable_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="window_tinted_title_enabled"
            android:key="window_tinted_title_bordertint"
            android:summary="@string/pref_movable_others_tinted_title_border_summary"
            android:title="@string/pref_movable_others_tinted_title_border_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="window_tinted_title_enabled"
            android:key="window_tinted_title_cornertint"
            android:summary="@string/pref_movable_others_tinted_title_corner_summary"
            android:title="@string/pref_movable_others_tinted_title_corner_title" />
	</PreferenceCategory>
</PreferenceScreen>
