<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:summary=""
    android:title="Moving and resizing">
	
	<PreferenceCategory android:title="Moving">
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="window_moving_move_ab_enabled"
		android:summary="Drag windows by actionbar"
		android:title="Actionbar to move" />
	<com.zst.xposed.halo.floatingwindow3.prefs.WidgetNumberPicker
        defaultValue="50"
        maximum="150"
        minimum="0"
        android:dependency="window_moving_move_ab_enabled"
        android:key="move_max_range"
        android:summary="@string/pref_move_max_range_summary"
        android:title="@string/pref_move_max_range_title" />
	</PreferenceCategory>
    <PreferenceCategory android:title="Resizing">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="window_resizing_live_updating"
            android:summary="@string/pref_movable_resizing_live_update_summary"
            android:title="@string/pref_movable_resizing_live_update_title" />
    </PreferenceCategory>

</PreferenceScreen>
